05 dibujo en canvas

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>Document</title>
 </head>
 <body>
+    <a href="./colorsbg/index.html">Colores BG</a>
+    <a href="./colorsinput/index.html">Colores con rango</a>
+    <a href="./dynamicdiv/index.html">Dvii dinamico</a>
+    <a href="./ppt/index.html">PPT</a>
+    <a href="./todoapp/">Lista de tareas</a>
+    <a href="./dibujoHall/index.html">Dibujo</a>
     
 </body>
 </html>
