--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
 <body>
     <a href="./colorsbg/index.html">Colores BG</a>
     <a href="./colorsinput/index.html">Colores con rango</a>
-    <a href="./dynamicdiv/index.html">Dvii dinamico</a>
+    <a href="./dynamicdiv/index.html">Div dinamico</a>
     <a href="./ppt/index.html">PPT</a>
-    <a href="./todoapp/">Lista de tareas</a>
+    <a href="./todoapp/index.html">Lista de tareas</a>
     <a href="./dibujoHall/index.html">Dibujo</a>
+    <a href="./game/index.html"></a>
     
 </body>
 </html>
