--- a/ppt/index.html
+++ b/ppt/index.html
@@ -17,7 +17,7 @@
             <img src="./papel.png" alt="" data-id="papel">
         </picture>
         <picture>
-            <img src="./tijera.png" alt="" data-id="tijeras">
+            <img src="./tijeras.png" alt="" data-id="tijeras">
         </picture>
     </div>
 
@@ -30,7 +30,7 @@
         </picture>
     </div>
 
-    <div class="result">
+    <div id="result" class="result">
         <h1>Gana: <span></span></h1>
     </div>
 
