Menu en index + tareasApp restaurado

--- a/colorsbg/index.html
+++ b/colorsbg/index.html
@@ -12,6 +12,24 @@
             display: grid;
             place-items: center;
         }
+
+        a {
+            display: block;
+            margin: 10px 0;
+            padding: 10px;
+            text-decoration: none;
+            color: #ffffff;
+            background-color: #007BFF;
+            border-radius: 5px;
+        }
+
+        a:hover {
+            background-color: #0056b3;
+        }
+
+        a:active {
+            background-color: #003f7f;
+        }
     </style>
 </head>
 
@@ -20,7 +38,7 @@
         <button id="btnchange">Cambiar color</button>
         <h2>Color <span></span></h2>
     </div>
-
+    <a href="../index.html">atras</a>
     <script src="./app.js"></script>
 </body>
 
