--- a/colorsinput/index.html
+++ b/colorsinput/index.html
@@ -12,9 +12,28 @@
             display: grid;
             place-items: center;
         }
-        body div{
+
+        body div {
             display: flex;
             flex-direction: column;
+        }
+
+        a {
+            display: block;
+            margin: 10px 0;
+            padding: 10px;
+            text-decoration: none;
+            color: #ffffff;
+            background-color: #007BFF;
+            border-radius: 5px;
+        }
+
+        a:hover {
+            background-color: #0056b3;
+        }
+
+        a:active {
+            background-color: #003f7f;
         }
     </style>
 </head>
@@ -32,7 +51,7 @@
 
         <h2>Color <span></span></h2>
     </div>
-
+    <a href="../index.html">Atras</a>
     <script src="./app.js"></script>
 </body>
 
