--- a/index.html
+++ b/index.html
@@ -1,18 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
+
 <body>
-    <a href="./colorsbg/index.html">Colores BG</a>
-    <a href="./colorsinput/index.html">Colores con rango</a>
-    <a href="./dynamicdiv/index.html">Div dinamico</a>
-    <a href="./ppt/index.html">PPT</a>
-    <a href="./todoapp/index.html">Lista de tareas</a>
-    <a href="./dibujoHall/index.html">Dibujo</a>
-    <a href="./game/index.html"></a>
-    
+    <div>
+        <a href="./colorsbg/index.html">Colores BG</a>
+        <a href="./colorsinput/index.html">Colores con rango</a>
+        <a href="./dynamicdiv/index.html">Div dinamico</a>
+        <a href="./ppt/index.html">PPT</a>
+        <a href="./tareasApp/index.html">Lista de tareas</a>
+        <a href="./animado/index.html">animado</a>
+        <a href="./dibujoHall/index.html">Dibujo</a>
+        <a href="./game/index.html">Juego de Snake</a>
+    </div>
 </body>
+
 </html>
