--- a/dynamicdiv/index.html
+++ b/dynamicdiv/index.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DIV Dinamico</title>
     <style>
-        
         body {
             width: 100vw;
             height: 100vh;
             display: grid;
             place-items: center;
+            background-color: rgb(58, 2, 110);
         }
 
         body div {
@@ -26,11 +26,29 @@
             border-radius: 5px;
             box-shadow: 10px 5px 5px black;
         }
+
+        a {
+            display: block;
+            margin: 10px 0;
+            padding: 10px;
+            text-decoration: none;
+            color: #ffffff;
+            background-color: #007BFF;
+            border-radius: 5px;
+        }
+
+        a:hover {
+            background-color: #0056b3;
+        }
+
+        a:active {
+            background-color: #003f7f;
+        }
     </style>
 </head>
 
 <body>
-    <div class="container"> 
+    <div class="container">
 
         <label for="width">alto</label>
         <input type="range" id="alto" min="100" max="1000">
@@ -45,8 +63,8 @@
         <input type="range" id="sombra1" min="0" max="50">
         <input type="range" id="sombra2" min="0" max="50">
         <input type="range" id="sombra3" min="0" max="50">
-
     </div>
+    <a href="../index.html">Atras</a>
     <script src="./app.js"></script>
 </body>
 
