--- a/game/index.html
+++ b/game/index.html
@@ -17,7 +17,8 @@
             padding: 0;
             margin: 0;
         }
-        .container{
+
+        .container {
             align-items: center;
             text-align: center;
         }
@@ -27,15 +28,36 @@
             border: 1px solid rgb(0, 0, 0);
             background-color: rgb(182, 6, 88);
         }
+
+        a {
+            display: block;
+            margin: 10px 0;
+            padding: 10px;
+            text-decoration: none;
+            color: #ffffff;
+            background-color: #007BFF;
+            border-radius: 5px;
+        }
+
+        a:hover {
+            background-color: #0056b3;
+        }
+
+        a:active {
+            background-color: #003f7f;
+        }
     </style>
 </head>
 
 <body>
     <div class="container">
-        <h2>Puntuacion <h2 id="puntuacion"></h2></h2>
+        <h2>Puntuacion <h2 id="puntuacion"></h2>
+        </h2>
         <canvas id="lienzo" width="600" height="400"></canvas>
-        <h2>Mejor Puntuacion<p id="mejorP"></p></h2>
+        <h2>Mejor Puntuacion<p id="mejorP"></p>
+        </h2>
     </div>
+    <a href="../index.html">Atras</a>
     <script src="./app.js"></script>
 </body>
 
