--- a/ppt/index.html
+++ b/ppt/index.html
@@ -33,7 +33,7 @@
     <div id="result" class="result">
         <h1>Gana: <span></span></h1>
     </div>
-
+    <a href="../index.html">Atras</a>
     <script src="./app.js"></script>
 </body>
 
