--- a/tareasApp/index.html
+++ b/tareasApp/index.html
@@ -1,20 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>App de Tareas</title>
+    <title>App de tareas </title>
+    <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
     <div class="container">
         <h1>App de tareas</h1>
-        <!-- .clase:type#id -->
-        <input type="text" name="" id="tareatxt"> 
-        <button id="addtarea">Agregar</button>
+        <form id="myForm">
+            <input type="text" name="" id="tareatext">
+            <button id="addtarea">Agregar</button>
+        </form>
         <div id="tareas">
-            
         </div>
     </div>
+    <a href="../index.html">Atras</a>
     <script src="./app.js"></script>
 </body>
+
 </html>
