--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
         <a href="./dynamicdiv/index.html">Div dinamico</a>
         <a href="./ppt/index.html">PPT</a>
         <a href="./tareasApp/index.html">Lista de tareas</a>
-        <a href="./animado/index.html">animado</a>
+        <a href="./animado/index.html">Animado 1</a>
+        <a href="./animado/index2.html">Animado 2</a>
+        <a href="./animado/index3.html">Animado 3</a>
         <a href="./dibujoHall/index.html">Dibujo</a>
         <a href="./game/index.html">Juego de Snake</a>
     </div>
